tests/invalid/require_complete_nested_switch.err_exp
require_complete_nested_switch.m:094: Warning: this disjunct [38;5;203mwill never have[39;49m
require_complete_nested_switch.m:094:   [38;5;203many solutions.[39;49m
require_complete_nested_switch.m:096: Inside the case "k" of the switch on Str:
require_complete_nested_switch.m:096:   error: the goal inside the
require_complete_nested_switch.m:096:   [38;5;87mrequire_complete_switch [Str] scope[39;49m is
require_complete_nested_switch.m:096:   [38;5;203mnot a switch on `Str'.[39;49m
